[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/mainmenu/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fog.shader" type="Shader" id=2]
[ext_resource path="res://assets/white.png" type="Texture" id=3]
[ext_resource path="res://assets/grain1.png" type="Texture" id=4]
[ext_resource path="res://assets/dt5.png" type="Texture" id=5]
[ext_resource path="res://assets/logo2.png" type="Texture" id=6]
[ext_resource path="res://assets/FiraMono-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/mainmenu/loadgamebutton.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/color = Vector3( 0.15, 0.15, 0.38 )
shader_param/octaves = 8

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="scene" type="Node"]
script = ExtResource( 1 )

[node name="fog" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 643.623, 366.055 )
scale = Vector2( 21.1132, 12.4392 )
z_index = -1
texture = ExtResource( 3 )

[node name="filmgrain" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.219608 )
position = Vector2( 640, 1742.87 )
texture = ExtResource( 4 )

[node name="photo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.219608 )
position = Vector2( 700, 420 )
texture = ExtResource( 5 )

[node name="logo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.816667 )
position = Vector2( 640, 100 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Container" type="Container" parent="."]
margin_left = 640.0
margin_top = 240.0
margin_right = 760.0
margin_bottom = 360.0

[node name="MenuVBox" type="VBoxContainer" parent="Container"]
margin_left = -95.0
margin_right = 100.0
margin_bottom = 228.0
alignment = 1

[node name="newgamebutton" type="Button" parent="Container/MenuVBox"]
margin_right = 195.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
flat = true

[node name="loadgamebutton" type="Button" parent="Container/MenuVBox"]
margin_top = 59.0
margin_right = 195.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Load Game"
flat = true
script = ExtResource( 8 )

[node name="settingsbutton" type="Button" parent="Container/MenuVBox"]
margin_top = 118.0
margin_right = 195.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 4 )
text = "Settings"
flat = true

[node name="quitbutton" type="Button" parent="Container/MenuVBox"]
margin_top = 177.0
margin_right = 195.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 5 )
text = "Quit"
flat = true

[node name="Version" type="Label" parent="."]
margin_top = 700.0
margin_right = 70.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 6 )
text = "V 0.0.1"

[connection signal="check_save" from="." to="Container/MenuVBox/loadgamebutton" method="_on_root_check_save"]
[connection signal="pressed" from="Container/MenuVBox/newgamebutton" to="." method="_on_newgamebutton_pressed"]
[connection signal="pressed" from="Container/MenuVBox/quitbutton" to="." method="_on_quitbutton_pressed"]
